--- a/css/main.css
+++ b/css/main.css
@@ -8,20 +8,48 @@ html {
   box-sizing: inherit;
 }
 
-main {
+header {
   list-style: none;
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr;
   grid-template-areas:
-    "box1 box1 box1"
-    "box2 box3 box4";
+  "box4 box4 box4";
+  }
+
+  div {
+    grid-area: box4;
+    grid-column: 1 / -1;
+    align-self: end;
+    color: white;
+    padding: 1rem;
+  }
+
+main {
+  list-style: none;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas:
+    "box1 box2 box3";
 }
 
 img {
   width: 100%;
+}
+
+.artemis {
   grid-area: box1;
+}
+
+.rhodes {
+  grid-area: box2;
+}
+
+.babylon {
+  grid-area: box3;
 }
 
 .banner {
